    * FIX: Fixed layout problem of "new special rule" button in rule editor
    * FIX: Fixed layout problem on "activate changes" page
    * FIX: Added check if contacts belong to contactgroup before contactgroup deletion
    * FIX: fix site configuration for local site in Multisite environments
    * FIX: "(no not monitor)" setting in distributed WATO now works

    Multisite:
    * New display type 'boxes-omit-root' for BI views
    * Hostgroup view BI Boxes omits the root level
    * Finalized layout if view options and commands/filters/painteroptions.
    * FIX: remove refresh button from dashboard.
    * FIX: remove use of old option defaults.checkmk_web_uri
    * FIX: fixed outgoing bandwidth in fc port perfometer
    * FIX: remove nasty JS error in sidebar
    * FIX: fix folding in custom links (directories would not open)
    * FIX: animation of rotation treeangle in trees works again
    * FIX: Logwatch: Changed font color back to black
    * FIX: show toggle button for checkboxes in deactivated state
    * FIX: fix repeated stacked refresh when toggling columns
    * FIX: disable checkbox button in non-checkboxable layouts
    * FIX: fix table layout for views (gaps where missing sometimes)
    * FIX: Fixed sorting views by perfdata values which contain floats
    * FIX: fix sometimes-broken sizing of sidebar and dashboard on Chrome
    * FIX: fix dashboard layout on iPad

    Mobile:
    * FIX: Fixed logtime filter settings in all mobile views
    * FIX: fix some layout problems

    BI:
    * New aggregation function count_ok, that counts the number
      of nodes in state OK.
    * FIX: Removed debug output int count_ok aggregation

    Checks & Agents:
    * Linux: Modified cluster section to allow pacemaker/corosync clusters without heartbeat
    * AIX: convert NIC check to lnx_if (now being compatible with if/if64)
    * AIX: new check for CPU utilization (using section lparstat_aix)

1.2.0b4:
    Core: